minecraft/minecraft.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: minecraft
  name: minecraft
  namespace: minecraft
spec:
  replicas: 1
  serviceName: minecraft
  selector:
    matchLabels:
      app: minecraft
  template:
    metadata:
      labels:
        app: minecraft
    spec:
      # only allow redis to run on the master which is expected to always have a physical drive attached
      nodeSelector:
        dedicated: master
      tolerations:
      - key: dedicated
        operator: Equal
        value: master
        effect: NoSchedule
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: mc
          image: ghcr.io/terranblake/minecraft-server
          ports:
            - name: http
              containerPort: 25565
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          hostPath:
            path: /opt/minecraft
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: minecraft
  name: minecraft
  namespace: minecraft
spec:
  ports:
    - port: 25565
      targetPort: 25565
  selector:
    app: minecraft
  type: LoadBalancer
