minecraft/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: minecraft
    nginx.org/websocket-services: minecraft
spec:
  tls:
    - hosts:
        - mc.terranblake.com
        - mch.terranblake.com
        - mc-map.terranblake.com
      secretName: minecraft-tls
  rules:
    - host: mc.terranblake.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft
                port:
                  number: 25565
    - host: mch.terranblake.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-hard
                port:
                  number: 25566
    - host: mcm.terranblake.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: map
                port:
                  number: 5000
